fix: align text to left on events

--- a/Home/src/components/CSS/EventCard.module.css
+++ b/Home/src/components/CSS/EventCard.module.css
@@ -22,6 +22,7 @@
   background-size: 101%;
   position: relative;
   z-index: 2;
+  text-align: left;
 }
 
 .eventImage {
